# rollblock

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.githooks/: pre-commit
.github/workflows/: clippy.yml  fmt.yml  publish.yml  test.yml
docs/: architecture.md  block_benchmark.md  configuration.md  e2e_quick_start.md  examples.md  observability.md  store_architecture.md  store_usage.md  testing.md
examples/: README.md  basic_usage.rs  block_benchmark.rs  blockchain_reorg.rs  network_client.rs  observability.rs  parallel_processing.rs  sparse_blocks.rs
src/: api.rs  client.rs  lib.rs  net.rs  runtime.rs  state.rs  storage.rs
src/api/: error.rs  facade.rs  types.rs
src/api/facade/: block.rs  config.rs  core.rs  recovery.rs  tests.rs
src/net/: auth.rs  server.rs
src/runtime/: metrics.rs  orchestrator.rs
src/runtime/metrics/: health.rs  snapshot.rs
src/runtime/orchestrator/: default.rs  durability.rs  persistence.rs  read_only.rs
src/runtime/orchestrator/persistence/: pending_blocks.rs  queue.rs  runtime.rs  task.rs
src/state/: engine.rs  shard.rs
src/state/engine/: executor.rs  hashing.rs  planner.rs  replay.rs
src/state/shard/: raw_table.rs
src/storage/: fs.rs  journal.rs  metadata.rs  snapshot.rs
src/storage/fs/: store_lock.rs
src/storage/journal/: chunk.rs  file.rs  format.rs  iter.rs  maintenance.rs  pruner.rs
src/storage/metadata/: lmdb.rs
src/storage/metadata/lmdb/: durability.rs  env.rs  layout.rs
src/storage/snapshot/: format.rs  gc.rs  reader.rs  writer.rs
tests/: e2e.rs  network.rs  orchestrator.rs  store_modes.rs
tests/common/: e2e_support.rs  support.rs
tests/e2e/: concurrency.rs  core.rs  durability.rs  mod.rs  observability.rs  resilience.rs
tests/orchestrator/: flow.rs  mod.rs  persistence.rs
