[package]
name = "rollblock"
version = "0.1.0"
edition = "2021"
authors = ["Rollblock Contributors"]
license = "MIT OR Apache-2.0"
description = "A high-performance, reliable state storage system with rollback support, optimized for blockchain applications"
repository = "https://github.com/ouziel-slama/rollblock"
keywords = ["blockchain", "storage", "rollback", "state", "database"]
categories = ["database", "data-structures"]
readme = "README.md"

[dependencies]
hashbrown = { version = "0.14.5", features = ["raw"] }
parking_lot = "0.12.3"
rayon = "1.10.0"
memmap2 = "0.9.4"
heed = "0.20.5"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
zstd = "0.13.1"
blake3 = "1.5.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3.12.0"
serde_json = "1.0"

[features]
slow-tests = []

