[package]
name = "rollblock"
version = "0.3.0"
edition = "2021"
authors = ["Ouziel Slama"]
license = "MIT OR Apache-2.0"
description = "A super-fast, block-oriented and rollbackable key-value store."
repository = "https://github.com/ouziel-slama/rollblock"
keywords = ["blockchain", "storage", "rollback", "state", "database"]
categories = ["database", "data-structures"]
readme = "README.md"

[dependencies]
base64 = "0.22"
hashbrown = { version = "0.14.5", features = ["raw"] }
parking_lot = "0.12.3"
rayon = "1.10.0"
rustls = "0.21"
rustls-pemfile = "1.0"
memmap2 = "0.9.4"
heed = "0.20.5"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
zstd = "0.13.1"
blake3 = "1.5.4"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync"] }
tokio-rustls = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
fs2 = "0.4"

[dev-dependencies]
rcgen = "0.12"
serde_json = "1.0"
tempfile = "3.12.0"

