[package]
name = "rollblock"
version = "0.4.1"
edition = "2021"
authors = ["Ouziel Slama"]
license = "MIT OR Apache-2.0"
description = "A super-fast, block-oriented and rollbackable key-value store."
repository = "https://github.com/ouziel-slama/rollblock"
keywords = ["blockchain", "storage", "rollback", "state", "database"]
categories = ["database", "data-structures"]
readme = "README.md"
build = "build.rs"

[dependencies]
base64 = "0.22"
hashbrown = { version = "0.14.5", features = ["raw"] }
parking_lot = "0.12.3"
rayon = "1.10.0"
rustls = "0.21"
rustls-pemfile = "1.0"
memmap2 = "0.9.4"
heed = "0.20.5"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
zstd = "0.13.1"
blake3 = "1.5.4"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync"] }
tokio-rustls = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
fs2 = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[features]
default = []
key-8 = []
key-9 = []
key-10 = []
key-11 = []
key-12 = []
key-13 = []
key-14 = []
key-15 = []
key-16 = []
key-17 = []
key-18 = []
key-19 = []
key-20 = []
key-21 = []
key-22 = []
key-23 = []
key-24 = []
key-25 = []
key-26 = []
key-27 = []
key-28 = []
key-29 = []
key-30 = []
key-31 = []
key-32 = []
key-33 = []
key-34 = []
key-35 = []
key-36 = []
key-37 = []
key-38 = []
key-39 = []
key-40 = []
key-41 = []
key-42 = []
key-43 = []
key-44 = []
key-45 = []
key-46 = []
key-47 = []
key-48 = []
key-49 = []
key-50 = []
key-51 = []
key-52 = []
key-53 = []
key-54 = []
key-55 = []
key-56 = []
key-57 = []
key-58 = []
key-59 = []
key-60 = []
key-61 = []
key-62 = []
key-63 = []
key-64 = []

[dev-dependencies]
rcgen = "0.12"
serde_json = "1.0"
tempfile = "3.12.0"

